<resources>
    <string name="app_name">My Application</string>
    <string name="login_title">Login/Register</string>
    <string name="app_title">Grimpeurs Cycling Club App</string>
    <string name="admin_title">Administrator</string>
    <string name="Club_manager_title">Club Manager</string>
    <string name="participant_title">Participant</string>
    <string name="join_event_page_title">Join Events</string>
    <string name="event_search_page_title">Search For Events</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="button_text_admin">Login</string>
    <string name="button_text_register">Register</string>

    // admin page strings
    <string name="welcome_page">Welcome!</string>
    <string name="username_display_welcome_page">username</string>
    <string name="typeUser_display_welcome_page">user_type</string>
    <string name="nameOfProj_display_welcome_page">smth</string>
    <string name="event_text_display">Here is a new event happening!</string>
    <string name="welcome_admin_textdisplay">Welcome Admin!</string>
    <string name="delete_account_text">Delete a club or participant account</string>
    <string name="event_manager_text">Event management</string>
    <string name="logout_button">Logout</string>


    // delete account activity strings
    <string name="account_management_text">Account management</string>
    <string name="active_clubs_text">Active Clubs</string>
    <string name="active_accounts_text">Active Accounts</string>

    // event management activity strings
    <string name="new_event_type_text">New event type</string>
    <string name="editdelete_existing_event_text">Edit/Delete existing event</string>
    <string name="new_event_type_text_button">New</string>

    // new event activity strings
    <string name="eventType_title">Event Type: </string>
    <string name="newevent_activity_title">New Event Configuration</string>
    <string name="select_required_eventdetails">Select required event details</string>

    // edit event activity
    <string name="list_of_current_events">List of active events</string>

    // main activity strings? whoever made this figure it out
    <string name="register_account">Register</string>
    <string name="register_account_text">Register for an account</string>

    //CreateAccountActivity
    <string name="First_Name_input_field">First Name</string>

    <string name="Last_Name_input_field">Last Name</string>

    <string name="email_input_field">Email</string>

    //drop down menu
    <string-array name="dropdown_menu">
        <item>Time Trial</item>
        <item>Hill Climb</item>
        <item>Road Stage Race</item>
        <item>Road Race</item>
        <item>Group Ride</item>
    </string-array>

    //drop down menu for event search
    <string-array name="dropdown_menu_event_search">
        <item>Event Type</item>
        <item>Time Trial</item>
        <item>Hill Climb</item>
        <item>Road Stage Race</item>
        <item>Road Race</item>
        <item>Group Ride</item>
    </string-array>

    <string name="submitButton">submit</string>

    <string name="participant_account">Create a participant account</string>

    <string name="club_account">Create a club account</string>
    <string name="les_grimpeurs">Les Grimpeurs</string>

    <string-array name="dropdown_menu_event_types">
        <item>Time Trial</item>
        <item>Hill Climb</item>
        <item>Road Stage Race</item>
        <item>Road Race</item>
        <item>Group Ride</item>
    </string-array>

    //Drop down menu items
    <string name="accountManagementDropDown">Account Management</string>
    <string name="homeDropDown">Home</string>
    <string name="eventTypeManagementDropDown">Event Management</string>

    //Club Manager
    <string name="CreateEvent">Create Event</string>
    <string name="Instagram">Instagram</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="AddEvent">Create Event</string>
    <string name="Participants">Number of Participants</string>

    //Club Manager Bottom nav menu items
    <string name="createEventBottomNav">Create Event</string>
    <string name="editProfileBottomNav">Edit Profile</string>

    //Participant Bottom nav menu items
    <string name="clubsBottomNav">Clubs</string>
    <string name="eventsBottomNav">Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Strings for fragment participant club view
    <string name="participantclubview_title">Active Clubs</string>

    // Strings for join_event_requirements
    <string name="join_event_requirements_title">Registration</string>

    // Strings for club_homepage
    <string name="club_homepage">My Club Manager</string>
    <string name="current_club_name">You are a member of: </string>

</resources>