<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/clubsBottomNavItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/club_group"
        android:title="@string/clubsBottomNav" />
    <item
        android:id="@+id/homeParticipantBottomNavItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/admin_home_icon"
        android:title="@string/homeDropDown" />
    <item
        android:id="@+id/eventsBottomNavItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/events"
        android:title="@string/eventsBottomNav" />
</menu>