<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/createEventBottomNavItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/create_event_icon"
        android:title="@string/createEventBottomNav" />
    <item
        android:id="@+id/homeClubManagerBottomNavItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/admin_home_icon"
        android:title="@string/homeDropDown" />
    <item
        android:id="@+id/editProfileBottomNavItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/edit_profile_icon"
        android:title="@string/editProfileBottomNav" />
</menu>