<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrationpage.CreateAccountActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButtonRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/backarrow3"
        app:backgroundTint="@color/app_colour"
        app:fabCustomSize="35sp"
        app:fabSize="auto"
        app:maxImageSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <TextView
            android:id="@+id/RegisterAccountTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/darker_grotesque_light"
            android:gravity="center"
            android:text="@string/register_account_text"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp" />

        <EditText
            android:id="@+id/firstNamefield"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/First_Name_input_field"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="51dp" />

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/Last_Name_input_field"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="51dp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/email_input_field"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="51dp" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="51dp" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/participant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="CreateParticipantAccount"
                android:text="@string/participant_account" />


            <RadioButton
                android:id="@+id/club"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="CreateClubAccount"
                android:text="@string/club_account" />
        </RadioGroup>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/app_colour"
            android:fontFamily="@font/darker_grotesque_light"
            android:text="@string/button_text_register"
            android:textSize="22sp"
            android:textStyle="bold"
            app:cornerRadius="20sp" />
    </LinearLayout>
</RelativeLayout>