<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeAdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/username_display_welcome_page"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/appNameWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/les_grimpeurs"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/userRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/typeUser_display_welcome_page"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="58dp" />


        <TextView
            android:id="@+id/welcomeAdminPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center|center_vertical"
            android:text="@string/welcome_admin_textdisplay"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            app:srcCompat="@drawable/ride" />

        <Button
            android:id="@+id/eventManagementBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_manager_text" />

        <Button
            android:id="@+id/deleteAccountBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="DeleteAccount"
            android:text="@string/delete_account_text" />

    </LinearLayout>
</RelativeLayout>