<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventManagement">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButtonEventManagement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/backarrow3"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:fabCustomSize="40sp"
        app:fabSize="auto"
        app:maxImageSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appNameWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/les_grimpeurs"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listOfCurrentEventsID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/event_manager_text"
            android:textSize="28sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:onClick="NewEvent"
            android:text="@string/new_event_type_text" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:onClick="EditEvent"
            android:text="@string/editdelete_existing_event_text" />


    </LinearLayout>
</RelativeLayout>