<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LoginRegiserPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/darker_grotesque_light"
            android:gravity="center"
            android:text="@string/app_title"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <TextView
            android:id="@+id/adminTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/darker_grotesque_light"
            android:gravity="center"
            android:text="@string/admin_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameHint"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordHint"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#F66335"
            android:fontFamily="@font/darker_grotesque_light"
            android:onClick="AdminLogin"
            android:text="@string/button_text_admin"
            android:textSize="22sp"
            android:textStyle="bold"
            app:cornerRadius="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <TextView
            android:id="@+id/adminTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/darker_grotesque_light"
            android:gravity="center"
            android:text="@string/Club_manager_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameHint2"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordHint2"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttongClubManager"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#F66335"
            android:fontFamily="@font/darker_grotesque_light"
            android:onClick="Login"
            android:text="@string/button_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp" />

        <TextView
            android:id="@+id/adminTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/darker_grotesque_light"
            android:gravity="center"
            android:text="@string/participant_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameHint3"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordHint3"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonParticipant"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#F66335"
            android:fontFamily="@font/darker_grotesque_light"
            android:onClick="Login"
            android:text="@string/button_text"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>