<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginpage.LoginHomePageActivity">

    <LinearLayout
        android:id="@+id/LoginRegiserPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/darker_grotesque_light"
            android:gravity="center"
            android:text="@string/app_title"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <ImageView
            android:id="@+id/cycling_app_logo"
            android:layout_width="125sp"
            android:layout_height="125sp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/cycling_app_logo"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <TextView
            android:id="@+id/adminTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/darker_grotesque_light"
            android:gravity="center"
            android:text="@string/button_text_admin"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameHint"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:paddingLeft="15sp"
            android:paddingRight="15sp" />

        <EditText
            android:id="@+id/passwordHint"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingLeft="15sp"
            android:paddingRight="15sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:fontFamily="@font/darker_grotesque_light"
            android:onClick="AdminLogin"
            android:text="@string/button_text_admin"
            android:textSize="22sp"
            android:textStyle="bold"
            app:cornerRadius="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/adminTitle2"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_gravity="center"
            android:fontFamily="@font/darker_grotesque_light"
            android:gravity="center"
            android:onClick="CreateAccountLink"
            android:text="@string/register_account_text"
            android:textColor="#2196F3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp" />

    </LinearLayout>
</RelativeLayout>