<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteAccount">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButtonDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/backarrow3"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:fabCustomSize="40sp"
        app:fabSize="auto"
        app:maxImageSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/appNameWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/les_grimpeurs"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="52dp" />

        <TextView
            android:id="@+id/listOfCurrentEventsID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/account_management_text"
            android:textSize="28sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/activeclubsID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active_clubs_text"
            android:textSize="24dp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="252dp" />

        <TextView
            android:id="@+id/activeAccountsID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active_accounts_text"
            android:textSize="24dp" />

        <ListView
            android:id="@+id/activeAccounts"
            android:layout_width="match_parent"
            android:layout_height="257dp" />


    </LinearLayout>
</RelativeLayout>